--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,3 +1,10 @@
+.page-container {
+  background: rgb(255,153,133);
+  background: linear-gradient(149deg, rgba(255,153,133,1) 0%, rgba(255,93,93,1) 100%); 
+  width: 100%;
+  height: 100%;
+}
+
 .main {
   position: absolute;
 }
